--- a/about.html
+++ b/about.html
@@ -373,63 +373,61 @@
 
 	<footer class="ftco-footer ftco-bg-dark ftco-section">
 		<div class="container">
-			<div class="row mb-5 d-flex">
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Whitespace</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
-						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4 ml-md-4">
-						<h2 class="ftco-heading-2">Who we are</h2>
-						<ul class="list-unstyled">
-							<li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Quick Links</h2>
-						<ul class="list-unstyled">
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="#">Terms &amp; Conditions</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Have a Questions?</h2>
-						<div class="block-23 mb-3">
-							<ul>
-								<li><span class="icon xi-maker"></span><span class="text">New Zealand | Korea</span>
-								</li>
-								<li><span class="icon xi-kakaotalk"></span><span class="text">whitespace</span></li>
-								<li><span class="icon xi-skype"></span><span class="text">whitespace</span></li>
-								<li><span class="icon xi-gmail"></span><span
-										class="text">tell.whitespace@gmail.com</span></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+		  <div class="row mb-5 d-flex">
+			<div class="col-md">
+			  <div class="ftco-footer-widget mb-4">
+				<h2 class="ftco-heading-2">Whitespace</h2>
+				<p>
+				  Your website is your first chance to influence your audience, and we will make sure it’s a pleasant and memorable one. Our team of experienced and aesthetically gifted designers and artists will make you stand out from the crowd in a good way.
+				</p>
+				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
+				  <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+				  <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace"><span class="icon-facebook"></span></a></li>
+				  <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace"><span class="icon-instagram"></span></a></li>
+				</ul>
+			  </div>
 			</div>
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<p>Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> Whitespace All rights reserved</a>
-					</p>
-				</div>
+			<div class="col-md">
+			  <div class="ftco-footer-widget mb-4 ml-md-4">
+				<h2 class="ftco-heading-2">Who we are</h2>
+				<ul class="list-unstyled">
+				  <li><a href="index.html">Home</a></li>
+				  <li><a href="about.html">About</a></li>
+				  <li><a href="work.html">Work</a></li>
+				</ul>
+				
+			  </div>
 			</div>
+			<div class="col-md">
+			   <div class="ftco-footer-widget mb-4">
+				<h2 class="ftco-heading-2">Quick Links</h2>
+				<ul class="list-unstyled">
+				  <li><a href="contact.html">Contact</a></li>
+				  <li><a href="#">Terms &amp; Conditions</a></li>
+				</ul>
+			  </div>
+			</div>
+			<div class="col-md">
+			  <div class="ftco-footer-widget mb-4">
+				  <h2 class="ftco-heading-2">Have a Questions?</h2>
+				  <div class="block-23 mb-3">
+					<ul>
+					  <li><span class="icon xi-maker"></span><span class="text">New Zealand | Korea</span></li>
+					  <li><span class="icon xi-kakaotalk"></span><span class="text">whitespace</span></li>
+					  <li><span class="icon xi-skype"></span><span class="text">whitespace</span></li>
+					  <li><span class="icon xi-gmail"></span><span class="text">tell.whitespace@gmail.com</span></li>
+					</ul>
+				  </div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="row">
+			<div class="col-md-12 text-center">
+			  <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Whitespace All rights reserved</a></p>
+			</div>
+		  </div>
 		</div>
-	</footer>
+	  </footer>
 
 	<!-- loader -->
 	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
