--- a/index.html
+++ b/index.html
@@ -421,6 +421,11 @@
               <p>
 				Your website is your first chance to influence your audience, and we will make sure it’s a pleasant and memorable one. Our team of experienced and aesthetically gifted designers and artists will make you stand out from the crowd in a good way.
 			  </p>
+			  <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace"><span class="icon-instagram"></span></a></li>
+              </ul>
             </div>
           </div>
           <div class="col-md">
@@ -431,11 +436,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
 			  </ul>
-			  <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-                <!-- <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li> -->
-                <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace"><span class="icon-instagram"></span></a></li>
-              </ul>
+			  
             </div>
           </div>
           <div class="col-md">
