--- a/work.html
+++ b/work.html
@@ -162,11 +162,13 @@
 			<div class="col-md">
 			  <div class="ftco-footer-widget mb-4">
 				<h2 class="ftco-heading-2">Whitespace</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				<p>
+				  Your website is your first chance to influence your audience, and we will make sure it’s a pleasant and memorable one. Our team of experienced and aesthetically gifted designers and artists will make you stand out from the crowd in a good way.
+				</p>
 				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-				  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-				  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-				  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+				  <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+				  <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace"><span class="icon-facebook"></span></a></li>
+				  <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace"><span class="icon-instagram"></span></a></li>
 				</ul>
 			  </div>
 			</div>
@@ -178,6 +180,7 @@
 				  <li><a href="about.html">About</a></li>
 				  <li><a href="work.html">Work</a></li>
 				</ul>
+				
 			  </div>
 			</div>
 			<div class="col-md">
@@ -194,7 +197,6 @@
 				  <h2 class="ftco-heading-2">Have a Questions?</h2>
 				  <div class="block-23 mb-3">
 					<ul>
-					  <!-- <li><span class="icon icon-map-marker"></span><span class="text">New Zealand | Korea</span></li> -->
 					  <li><span class="icon xi-maker"></span><span class="text">New Zealand | Korea</span></li>
 					  <li><span class="icon xi-kakaotalk"></span><span class="text">whitespace</span></li>
 					  <li><span class="icon xi-skype"></span><span class="text">whitespace</span></li>
