--- a/about.html
+++ b/about.html
@@ -327,20 +327,7 @@
 					</div>
 				  </div>
 				</div>
-				<div class="item">
-				  <div class="testimony-wrap p-4 pb-5 text-center">
-					<div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-					  <span class="quote d-flex align-items-center justify-content-center">
-						<i class="icon-quote-left"></i>
-					  </span>
-					</div>
-					<div class="text">
-					  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					  <p class="name">Garreth Smith</p>
-					  <span class="position">System Analyst</span>
-					</div>
-				  </div>
-				</div>
+				
 			  </div>
 			</div>
 		  </div>
@@ -382,8 +369,8 @@
 				</p>
 				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
 				  <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-				  <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace"><span class="icon-facebook"></span></a></li>
-				  <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace"><span class="icon-instagram"></span></a></li>
+				  <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace" target="_blank"><span class="icon-facebook"></span></a></li>
+				  <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace" target="_blank"><span class="icon-instagram"></span></a></li>
 				</ul>
 			  </div>
 			</div>
