--- a/about.html
+++ b/about.html
@@ -390,7 +390,7 @@
 				<h2 class="ftco-heading-2">Quick Links</h2>
 				<ul class="list-unstyled">
 				  <li><a href="contact.html">Contact</a></li>
-				  <li><a href="#">Terms &amp; Conditions</a></li>
+				  <li><a href="termsconditions.html">Terms &amp; Conditions</a></li>
 				</ul>
 			  </div>
 			</div>
