--- a/termsconditions.html
+++ b/termsconditions.html
@@ -40,7 +40,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	        	<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
