--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
         </div>
     		<div class="row">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-baybay.jpg);">
     					<div class="overlay"></div>
     					<a href="#" class="btn-site d-flex align-items-center justify-content-center"><span class="icon-subdirectory_arrow_right"></span></a>
 	    				<div class="text text-center p-4">
@@ -139,19 +139,15 @@
     			</div>
     		</div>
     		<div class="row mt-5">
-	        <div class="col text-center">
+	        <!-- <div class="col text-center">
 	          <div class="block-27">
 	            <ul>
 	              <li><a href="work.html">&lt;</a></li>
 	              <li class="active"><a href="work.html"><span>1</span></a></li>
-	              <!-- <li><a href="work1.html">2</a></li>
-	              <li><a href="work2.html">3</a></li>
-	              <li><a href="#">4</a></li>
-	              <li><a href="#">5</a></li> -->
 	              <li><a href="work1.html">&gt;</a></li>
 	            </ul>
 	          </div>
-	        </div>
+	        </div> -->
 	      </div>
     	</div>
     </section>
