--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 				</ul>
 			</div>
@@ -230,8 +231,8 @@
 						<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 							<div class="block-18 text-center">
 								<div class="text">
-									<strong class="number" data-number="1000">0</strong>
-									<span>Work Hours</span>
+									<strong class="number" data-number="15">0</strong>
+		               				<span>Experience</span>
 								</div>
 							</div>
 						</div>
