--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,8 @@
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+            <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+            <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -49,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2 d-flex" style="background-image: url(images/bg_2.jpg);">
+    <section class="hero-wrap hero-wrap-2 d-flex" style="background-image: url(images/bg_blog.jpg);">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-flex align-items-center">
@@ -66,20 +67,22 @@
     <section class="ftco-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 ftco-animate">
+          <div class="col-lg-12 ftco-animate">
           	<div class="row">
 							<div class="col-md-6 ftco-animate">
 		            <div class="blog-entry">
-		              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+		              <a href="blog1.html" class="block-20" style="background-image: url('images/blog_online-payments-featured.png');">
 		              </a>
 		              <div class="text py-4">
 		                <div class="meta mb-3">
-		                  <div><a href="#">Sep. 20, 2018</a></div>
-		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+		                  <div style="color: tomato;">E-Commerce, WordPress</div>
+		                  <div>Admin</div>
+		                  <!-- <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div> -->
 		                </div>
 		                <div class="desc">
-			                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+			                <h3 class="heading">
+                        <a href="blog/blog1.html">How To Easily Accept Payments On Your WordPress Website</a>
+                      </h3>
 			              </div>
 		              </div>
 		            </div>
@@ -181,7 +184,7 @@
 		          </div>
 		        </div>
           </div> <!-- .col-md-8 -->
-          <div class="col-lg-4 sidebar ftco-animate">
+          <!-- <div class="col-lg-4 sidebar ftco-animate">
             <div class="sidebar-box">
               <form action="#" class="search-form">
                 <div class="form-group">
@@ -256,7 +259,8 @@
               <h3>Paragraph</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
             </div>
-          </div><!-- END COL -->
+          </div> -->
+          <!-- END COL -->
 
         </div>
       </div>
@@ -266,57 +270,61 @@
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
         <div class="row mb-5 d-flex">
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">Whitespace</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-          <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-          </ul>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Whitespace</h2>
+              <p>
+				Your website is your first chance to influence your audience, and we will make sure it’s a pleasant and memorable one. Our team of experienced and aesthetically gifted designers and artists will make you stand out from the crowd in a good way.
+			  </p>
+			  <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://www.facebook.com/tell.whitespace" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/tell.whitespace" target="_blank"><span class="icon-instagram"></span></a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4 ml-md-4">
-          <h2 class="ftco-heading-2">Who we are</h2>
-          <ul class="list-unstyled">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-          </ul>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4 ml-md-4">
+			  <h2 class="ftco-heading-2">Who we are</h2>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+			  </ul>
+			  
+            </div>
           </div>
-        </div>
-        <div class="col-md">
-           <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-heading-2">Quick Links</h2>
-          <ul class="list-unstyled">
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
-          </ul>
+          <div class="col-md">
+             <div class="ftco-footer-widget mb-4">
+			  <h2 class="ftco-heading-2">Quick Links</h2>
+              <ul class="list-unstyled">
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="termsconditions.html">Terms &amp; Conditions</a></li>
+                <li><a href="blog.html">Blog</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-md">
-          <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-            <ul>
-              <li><span class="icon xi-maker"></span><span class="text">New Zealand | Korea</span></li>
-              <li><span class="icon xi-kakaotalk"></span><span class="text">whitespace</span></li>
-              <li><span class="icon xi-skype"></span><span class="text">whitespace</span></li>
-              <li><span class="icon xi-gmail"></span><span class="text">tell.whitespace@gmail.com</span></li>
-            </ul>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                <li><span class="icon xi-maker"></span><span class="text">New Zealand | Korea</span></li>
+					<li><span class="icon xi-kakaotalk"></span><span class="text">whitespace</span></li>
+					<li><span class="icon xi-skype"></span><span class="text">whitespace</span></li>
+	                <li><span class="icon xi-gmail"></span><span class="text">tell.whitespace@gmail.com</span></li>
+	              </ul>
+	            </div>
             </div>
           </div>
         </div>
-        </div>
         <div class="row">
-        <div class="col-md-12 text-center">
-          <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Whitespace All rights reserved</a></p>
-        </div>
+          <div class="col-md-12 text-center">
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> Whitespace All rights reserved</a></p>
+          </div>
         </div>
       </div>
-      </footer>
+    </footer>
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
