--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+            <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+            <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -143,6 +144,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="work.html">Work</a></li>
+                
 			  </ul>
 			  
             </div>
@@ -153,6 +155,7 @@
               <ul class="list-unstyled">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="termsconditions.html">Terms &amp; Conditions</a></li>
+                <li><a href="blog.html">Blog</a></li>
               </ul>
             </div>
           </div>
