--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="1000">0</strong>
-		                <span>Work Hours</span>
+		                <strong class="number" data-number="15">0</strong>
+		                <span>Experience</span>
 		              </div>
 		            </div>
 		          </div>
